[package]
name = "y-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool Registry: 4 types, lazy loading, JSON Schema validation"

[dependencies]
y-core = { workspace = true }
y-hooks = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonschema = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
y-browser = { workspace = true }
y-knowledge = { workspace = true }
y-mcp = { workspace = true }
toml.workspace = true
chardetng = { workspace = true }
encoding_rs = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
grep-searcher = { workspace = true }
grep-regex = { workspace = true }
grep-matcher = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "tools_bench"
harness = false

[lints]
workspace = true
