[package]
name = "y-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP REST API server for y-agent — axum-based presentation layer"

[dependencies]
y-core = { workspace = true }
y-service = { workspace = true }
y-session = { workspace = true }
y-diagnostics = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []
diagnostics_pg = ["y-service/diagnostics_pg"]

[dev-dependencies]
y-test-utils = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }

[lints]
workspace = true
