[package]
name = "y-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri v2 desktop GUI for y-agent"

[lib]
name = "y_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.10", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
log = "0.4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Config
toml = { workspace = true }

# Tracing
tracing = { workspace = true }

# Internal crates
y-agent = { workspace = true }
y-service = { workspace = true }
y-core = { workspace = true }
y-provider = { workspace = true }
y-diagnostics = { workspace = true }
y-prompt = { workspace = true }
y-skills = { workspace = true }
y-knowledge = { workspace = true }
y-tools = { workspace = true }
y-context = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP client (for provider_test command)
reqwest = { workspace = true }

[lints]
workspace = true
